<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/billAmountTextView"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bill_amount" />

    <EditText
        android:id="@+id/billAmountEditText"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/percentLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/percentTextView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/percentTextView"
        android:layout_toLeftOf="@+id/percentTextView"
        android:text="@string/percent" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/billAmountEditText"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="-28dp"
        android:layout_toEndOf="@+id/billAmountTextView"
        android:layout_toRightOf="@+id/billAmountTextView"
        android:text="@string/default_tip_percentage" />

    <TextView
        android:id="@+id/tipLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:layout_marginTop="102dp"
        android:text="@string/tip"
        android:layout_marginLeft="7dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tipLabelTextView"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/tipLabelTextView"
        android:layout_toRightOf="@+id/tipLabelTextView"
        android:text="@string/default_tip" />

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="147dp"
        android:text="@string/total" />

    <TextView
        android:id="@+id/discountLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="125dp"
        android:text="@string/discount_label" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/percentTextView"
        android:layout_alignRight="@+id/percentTextView"
        android:layout_alignBottom="@+id/totalLabelTextView"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="-42dp"
        android:layout_marginRight="-42dp"
        android:layout_marginBottom="-1dp"
        android:layout_toEndOf="@+id/totalLabelTextView"
        android:layout_toRightOf="@+id/totalLabelTextView"
        android:text="@string/total_bill" />

    <TextView
        android:id="@+id/discountTextView"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/percentTextView"
        android:layout_alignRight="@+id/percentTextView"
        android:layout_alignBottom="@+id/totalLabelTextView"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginEnd="-42dp"
        android:layout_marginRight="-42dp"
        android:layout_marginBottom="22dp"
        android:layout_toEndOf="@+id/totalLabelTextView"
        android:layout_toRightOf="@+id/totalLabelTextView"
        android:text="@string/total_bill" />

    <SeekBar
        android:id="@+id/percentSeekBar"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/billAmountTextView"
        android:layout_alignLeft="@+id/billAmountTextView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-6dp"
        android:layout_marginLeft="-6dp"
        android:layout_marginTop="73dp"
        android:max="30"
        android:progress="15" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/percentSeekBar"
        android:layout_alignEnd="@+id/billAmountEditText"
        android:layout_alignRight="@+id/billAmountEditText"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="-9dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:layout_toEndOf="@+id/percentSeekBar"
        android:layout_toRightOf="@+id/percentSeekBar"
        android:onClick="onClick"
        android:text="@string/apply_button" />
</RelativeLayout>